--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
 
-        <div><!--INICIO CONTAINER-->
+        <div id="container"><!--INICIO CONTAINER-->
 
             <header><!--INICIO HEADER-->
 
@@ -35,6 +35,61 @@
                 </nav><!--/FIM NAV-->
 
             </header><!--/FIM HEADER-->
+
+            <div id="principal"><!--INICIO PRINCIPAL-->
+
+                <div id="conteudo">
+                    <section id="capa">
+                        <img src="img/museu.png">
+                    </section>
+                </div>
+
+                <aside>
+                    <section id="depoimento">
+                        <img src="img/depoimento.png">
+                    </section>
+
+                    <section id="visita"><!--INICIO SEÇÃO VISITA-->
+                        <h4>Faça uma Visita</h4>
+                        <form>
+                            <fieldset>
+                                <legend>Selecione uma data</legend>
+
+                                <label for="data">Data:</label>
+                                <input class="campo" type="text" id="data" value="dd/mm/aaaa">
+
+                                <label for="qtd">Qtd Pessoas:</label>
+                                <input class="campo" style="width: 30px" type="text" id="qtd">
+
+                            </fieldset>
+
+                            <input class="botao" type="submit" value="Verificar disponibilidade">
+                        </form>
+                    </section><!--/FIM SEÇÃO VISITA-->
+
+                    <section id="galeria"><!--INICIO SEÇÃO GALERIA DE FOTOS-->
+                        <h1>Galeria de fotos</h1>
+
+                        <a href="">
+                            <img src="img/imagem1.jpg" height="93"  width="93" alt="imagem1">
+                        </a>
+
+                        <a href="">
+                            <img src="img/imagem2.jpg" height="93"  width="93" alt="imagem2">
+                        </a>
+
+                        <a href="">
+                            <img src="img/imagem3.jpg" height="93"  width="93" alt="imagem3">
+                        </a>
+
+                        <a href="">
+                            <img src="img/imagem4.jpg" height="93"  width="93" alt="imagem4">
+                        </a>
+                        
+                    </section><!--/FIM SEÇÃO GALERIA DE FOTOS-->
+                </aside>
+
+            </div><!--/FIM PRINCIPAL-->
 
         </div><!--/FIM CONTAINER-->
     
