--- a/index.html
+++ b/index.html
@@ -42,6 +42,57 @@
                     <section id="capa">
                         <img src="img/museu.png">
                     </section>
+
+                    <section id="postagens">
+
+                        <article id="video" class="conteudo-artigos">
+                            <h3>Conheça o Museu</h3>
+                            <iframe width="310" height="170" src="https://www.youtube.com/embed/RGUYb-hivrc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                        </article>
+
+                        <article id="mapa" class="conteudo-artigos">
+                            <h3>Mapa: Encontre o Museu</h3>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14700.825245036422!2d-43.2265289!3d-22.90576!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4d11e9a933d38ce3!2sMuseu%20Nacional%20-%20UFRJ!5e0!3m2!1spt-BR!2sbr!4v1668446713467!5m2!1spt-BR!2sbr" width="310" height="170" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                        </article>
+
+                        <article id="exposicoes" class="conteudo-artigos">
+                            <h3>Exposições</h3>
+                            <ul>
+                                <li>
+                                    <a href="#">Os assustadores insetos</a>
+                                </li>
+                                <li>
+                                    <a href="#">O Crânio de Luzia, a mulher mais antiga do Brasil</a>
+                                </li>
+                                <li>
+                                    <a href="#">Preguiça gigante e tigre-dentes-de-sabre</a>
+                                </li>
+                                <li>
+                                    <a href="#">Plantas do Brasil Central</a>
+                                </li>
+                                <li>
+                                    <a href="#">Teresa Cristina: a Imperatriz Arqueóloga</a>
+                                </li>
+                                <li>
+                                    <a href="#">Arte com Dinossauro - Paleoarte</a>
+                                </li>
+                                <li>
+                                    <a href="#"><b>Veja Todos (65)</b></a>
+                                </li>
+                            </ul>
+
+                        </article>
+
+                        <article id="historia" class="conteudo-artigos">
+                            <h3>200 anos de história</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa corrupti consequuntur fugiat molestias. Nisi rem iure nobis, vero earum dolorum culpa sapiente doloremque praesentium. Nam numquam modi voluptates excepturi eaque.</p>
+                            <a href="#"><b>Leia mais</b></a>
+
+                        </article>
+
+                    </section>
                 </div>
 
                 <aside>
@@ -88,6 +139,21 @@
                         
                     </section><!--/FIM SEÇÃO GALERIA DE FOTOS-->
                 </aside>
+
+                <footer style="clear:both">
+                    <p>
+                        <a href="#">Home</a>
+                        <a href="#">Exposições</a>
+                        <a href="#">Pesquisa</a>
+                        <a href="#">Acervo</a>
+                        <a href="#">Vídeos</a>
+                        <a href="#">Fotos</a>
+                        <a href="#">Contato</a>
+                    </p>
+                    <p>
+                        2022 <a href="#">Museu Nacional</a> - Todos os direitos reservados.
+                    </p>
+                </footer>
 
             </div><!--/FIM PRINCIPAL-->
 
